--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "homepage": "https://github.com/shicks/calc#readme",
   "devDependencies": {
     "chai": "^4.1.2",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^3.0.3"
+  },
+  "dependencies": {
+    "big-integer": "^1.6.31",
+    "bignum": "^0.12.5"
   }
 }
